@@ -253,6 +253,8 @@ void DboxMain::OnOptions()
   system.m_mruonfilemenu = prefs->
     GetPref(PWSprefs::MRUOnFileMenu);
   system.m_startup = StartupShortcutExists;
+  system.m_neversaveDBnames = prefs->
+    GetPref(PWSprefs::NeverSaveDatabaseNames) ? TRUE : FALSE;
 
   display.m_alwaysontop = prefs->
     GetPref(PWSprefs::AlwaysOnTop) ? TRUE : FALSE;
@@ -448,10 +450,23 @@ void DboxMain::OnOptions()
       system.m_usesystemtray == TRUE);
     prefs->SetPref(PWSprefs::MaxREItems,
       system.m_maxreitems);
-    prefs->SetPref(PWSprefs::MaxMRUItems,
-      system.m_maxmruitems);
-    prefs->SetPref(PWSprefs::MRUOnFileMenu,
-      system.m_mruonfilemenu == TRUE);
+    prefs->SetPref(PWSprefs::NeverSaveDatabaseNames,
+      system.m_neversaveDBnames == TRUE);
+    if (system.m_neversaveDBnames == TRUE) {
+      // Set max saved to 0
+      prefs->SetPref(PWSprefs::MaxMRUItems, 0);
+      // Put them on File menu where they don't take up any room
+      prefs->SetPref(PWSprefs::MRUOnFileMenu, true);
+      // Clear any currently saved
+      app.ClearMRU();
+    } else {
+      // Otherwise use what the user wanted.
+      prefs->SetPref(PWSprefs::MaxMRUItems,
+        system.m_maxmruitems);
+      prefs->SetPref(PWSprefs::MRUOnFileMenu,
+        system.m_mruonfilemenu == TRUE);
+    }
+
 
     prefs->SetPref(PWSprefs::ClearClipoardOnMinimize,
       security.m_clearclipboardonminimize == TRUE);
