@@ -261,7 +261,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 216
         TOPMARGIN, 7
-        BOTTOMMARGIN, 173
+        BOTTOMMARGIN, 193
         HORZGUIDE, 19
         HORZGUIDE, 31
         HORZGUIDE, 40
@@ -458,15 +458,15 @@ IDB_BROWSEURL_NEW_D     BITMAP                  "res\\toolbar\\browseurl_new_dis
 IDB_CHANGECOMBO_CLASSIC BITMAP                  "res\\toolbar\\changecombo_classic.bmp"
 IDB_CHANGECOMBO_NEW     BITMAP                  "res\\toolbar\\changecombo_new.bmp"
 IDB_CHANGECOMBO_NEW_D   BITMAP                  "res\\toolbar\\changecombo_new_disabled.bmp"
-IDB_CHANGEFONTMENU_CLASSIC BITMAP               "res\\toolbar\\changefont_classic.bmp"
+IDB_CHANGEFONTMENU_CLASSIC BITMAP                  "res\\toolbar\\changefont_classic.bmp"
 IDB_CHANGEFONTMENU_NEW  BITMAP                  "res\\toolbar\\changefont_new.bmp"
-IDB_CHANGEFONTMENU_NEW_D BITMAP                 "res\\toolbar\\changefont_new_disabled.bmp"
-IDB_CHANGEPSWDFONTMENU_CLASSIC BITMAP           "res\\toolbar\\changepswdfont_classic.bmp"
-IDB_CHANGEPSWDFONTMENU_NEW BITMAP               "res\\toolbar\\changepswdfont_new.bmp"
-IDB_CHANGEPSWDFONTMENU_NEW_D BITMAP             "res\\toolbar\\changepswdfont_new_disabled.bmp"
-IDB_CLEARCLIPBOARD_CLASSIC BITMAP               "res\\toolbar\\clearclipboard_classic.bmp"
+IDB_CHANGEFONTMENU_NEW_D BITMAP                  "res\\toolbar\\changefont_new_disabled.bmp"
+IDB_CHANGEPSWDFONTMENU_CLASSIC BITMAP                  "res\\toolbar\\changepswdfont_classic.bmp"
+IDB_CHANGEPSWDFONTMENU_NEW BITMAP                  "res\\toolbar\\changepswdfont_new.bmp"
+IDB_CHANGEPSWDFONTMENU_NEW_D BITMAP                  "res\\toolbar\\changepswdfont_new_disabled.bmp"
+IDB_CLEARCLIPBOARD_CLASSIC BITMAP                  "res\\toolbar\\clearclipboard_classic.bmp"
 IDB_CLEARCLIPBOARD_NEW  BITMAP                  "res\\toolbar\\clearclipboard_new.bmp"
-IDB_CLEARCLIPBOARD_NEW_D BITMAP                 "res\\toolbar\\clearclipboard_new_disabled.bmp"
+IDB_CLEARCLIPBOARD_NEW_D BITMAP                  "res\\toolbar\\clearclipboard_new_disabled.bmp"
 IDB_CLOSE_CLASSIC       BITMAP                  "res\\toolbar\\close_classic.bmp"
 IDB_CLOSE_NEW           BITMAP                  "res\\toolbar\\close_new.bmp"
 IDB_CLOSE_NEW_D         BITMAP                  "res\\toolbar\\close_new_disabled.bmp"
@@ -479,17 +479,17 @@ IDB_COMPARE_NEW_D       BITMAP                  "res\\toolbar\\compare_new_disab
 IDB_COPYNOTES_CLASSIC   BITMAP                  "res\\toolbar\\copynotes_classic.bmp"
 IDB_COPYNOTES_NEW       BITMAP                  "res\\toolbar\\copynotes_new.bmp"
 IDB_COPYNOTES_NEW_D     BITMAP                  "res\\toolbar\\copynotes_new_disabled.bmp"
-IDB_COPYPASSWORD_CLASSIC BITMAP                 "res\\toolbar\\copypassword_classic.bmp"
+IDB_COPYPASSWORD_CLASSIC BITMAP                  "res\\toolbar\\copypassword_classic.bmp"
 IDB_COPYPASSWORD_NEW    BITMAP                  "res\\toolbar\\copypassword_new.bmp"
 IDB_COPYPASSWORD_NEW_D  BITMAP                  "res\\toolbar\\copypassword_new_disabled.bmp"
 IDB_COPYUSER_CLASSIC    BITMAP                  "res\\toolbar\\copyuser_classic.bmp"
 IDB_COPYUSER_NEW        BITMAP                  "res\\toolbar\\copyuser_new.bmp"
 IDB_COPYUSER_NEW_D      BITMAP                  "res\\toolbar\\copyuser_new_disabled.bmp"
-IDB_CREATESHORTCUT_CLASSIC BITMAP               "res\\toolbar\\createshortcut_classic.bmp"
+IDB_CREATESHORTCUT_CLASSIC BITMAP                  "res\\toolbar\\createshortcut_classic.bmp"
 IDB_CREATESHORTCUT_NEW  BITMAP                  "res\\toolbar\\createshortcut_new.bmp"
-IDB_CREATESHORTCUT_NEW_D BITMAP                 "res\\toolbar\\createshortcut_new_disabled.bmp"
-IDB_CUSTOMIZETBAR_CLASSIC BITMAP                "res\\toolbar\\cutsomizetoolbar_classic.bmp"
-IDB_CUSTOMIZETBAR_NEW  BITMAP                   "res\\toolbar\\cutsomizetoolbar_new.bmp"
+IDB_CREATESHORTCUT_NEW_D BITMAP                  "res\\toolbar\\createshortcut_new_disabled.bmp"
+IDB_CUSTOMIZETBAR_CLASSIC BITMAP                  "res\\toolbar\\cutsomizetoolbar_classic.bmp"
+IDB_CUSTOMIZETBAR_NEW   BITMAP                  "res\\toolbar\\cutsomizetoolbar_new.bmp"
 IDB_DELETE_CLASSIC      BITMAP                  "res\\toolbar\\delete_classic.bmp"
 IDB_DELETE_NEW          BITMAP                  "res\\toolbar\\delete_new.bmp"
 IDB_DELETE_NEW_D        BITMAP                  "res\\toolbar\\delete_new_disabled.bmp"
@@ -574,7 +574,7 @@ IDB_VIEWEDIT_NEW_D      BITMAP                  "res\\toolbar\\viewedit_new_disa
 IDB_VIEWREPORTS_CLASSIC BITMAP                  "res\\toolbar\\viewreports_classic.bmp"
 IDB_VIEWREPORTS_NEW     BITMAP                  "res\\toolbar\\viewreports_new.bmp"
 IDB_VIEWREPORTS_NEW_D   BITMAP                  "res\\toolbar\\viewreports_new_disabled.bmp"
-IDB_FINDADVANCED_CLASSIC BITMAP                 "res\\toolbar\\findadvanced_classic.bmp"
+IDB_FINDADVANCED_CLASSIC BITMAP                  "res\\toolbar\\findadvanced_classic.bmp"
 IDB_FINDADVANCED_NEW    BITMAP                  "res\\toolbar\\findadvanced_new.bmp"
 IDB_FINDCASE_I_CLASSIC  BITMAP                  "res\\toolbar\\findcase_i_classic.bmp"
 IDB_FINDCASE_I_NEW      BITMAP                  "res\\toolbar\\findcase_i_new.bmp"
@@ -945,30 +945,32 @@ BEGIN
     LTEXT           "minutes idle",IDC_STATIC,157,73,44,8
 END
 
-IDD_PS_SYSTEM DIALOGEX 0, 0, 223, 178
+IDD_PS_SYSTEM DIALOGEX 0, 0, 223, 198
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "System"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     GROUPBOX        "SystemTray",IDC_STATIC,7,2,209,52
-    CONTROL         "Put icon in System Tray",IDC_DEFPWUSESYSTRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,11,206,10
+    CONTROL         "Put icon in System Tray",IDC_DEFPWUSESYSTRAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,11,202,10
     LTEXT           "Remember last",IDC_STATIC,20,25,48,8
     EDITTEXT        IDC_MAXREITEMS,71,23,17,12,ES_NUMBER
     CONTROL         "",IDC_RESPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_HOTTRACK,88,23,10,14,WS_EX_CLIENTEDGE
-    LTEXT           "used entries in System Tray menu",IDC_STATIC_MAXREITEMS,100,25,116,10
-    GROUPBOX        "Recent PasswordSafe Databases",IDC_STATIC_GBMRU,7,58,209,55,WS_GROUP
+    LTEXT           "used entries in System Tray menu.",IDC_STATIC_MAXREITEMS,100,25,109,10
+    GROUPBOX        "Recent PasswordSafe Databases",IDC_STATIC_GBMRU,7,58,209,70,WS_GROUP
     LTEXT           "(Requires a restart of PasswordSafe to take effect.)",IDC_STATIC_RESTART,11,70,194,8
-    LTEXT           "Remember last",IDC_STATIC,13,83,48,8
+    LTEXT           "Remember last",IDC_STATIC_REMLAST,13,83,48,8
     EDITTEXT        IDC_MAXMRUITEMS,62,81,17,12,ES_NUMBER
     CONTROL         "",IDC_MRUSPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ARROWKEYS | UDS_HOTTRACK,77,81,10,14,WS_EX_CLIENTEDGE
-    LTEXT           "databases",IDC_STATIC_MAXMRUITEMS,90,83,88,10
+    LTEXT           "databases.",IDC_STATIC_MAXMRUITEMS,90,83,88,10
     CONTROL         "Recent Databases on File Menu rather than as a sub-menu.",IDC_MRU_ONFILEMENU,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,98,204,10
-    GROUPBOX        "Configuration Information",IDC_REGDEL_GRP,7,116,209,52
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,98,202,10
+    CONTROL         "Don't save the names of opened databases.",IDC_NEVERSAVEDBNAMES,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,113,194,10
+    GROUPBOX        "Configuration Information",IDC_REGDEL_GRP,7,130,209,52
     CONTROL         "Remove PasswordSafe data from Registry",IDC_REGDEL_CB,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,127,199,18
-    PUSHBUTTON      "Apply",IDC_REGDEL_BTN,20,148,50,14,WS_DISABLED
-    CONTROL         "Start PasswordSafe at Login",IDC_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,40,206,10
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,10,141,199,18
+    PUSHBUTTON      "Apply",IDC_REGDEL_BTN,20,162,50,14,WS_DISABLED
+    CONTROL         "Start PasswordSafe at Login",IDC_STARTUP,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,10,40,199,10
 END
 
 IDD_PS_DISPLAY DIALOGEX 0, 0, 223, 211
